Fixed some bugs and made async http long-tasks