@@ -124,3 +124,22 @@ task uninstall {
         }
     }
 }
+
+run {
+    applicationDefaultJvmArgs.addAll([
+            /*'--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',*/
+            '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+            '--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED',
+    ])
+
+    jvmArgs.addAll([
+            /*'--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',*/
+            '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+    ])
+}
+
